css/styles.css
/* ... */
.form-wrapper {
  padding-top: 4.4%;
  padding-bottom: 4.4%;
  background-color: white;
  box-shadow: 12px 12px #f5bf44;
  border: 3px solid black;
  border-radius: 30px;
  z-index: 2;
}

.form-wrapper:hover {
  transform: translate3d(0, -5px, 0);
}

/*rename all the classes below!*/

form {
  width: 90%;
  max-width: 600px;
  margin-left: 20px;
}
.input-group {
  margin-bottom: 30px;
  position: relative;
}

input,
textarea {
  width: 100%;
  padding: 10px;
  outline: 0;
  border: 1px solid black;
  color: black;
  background: transparent;
  font-size: 15px;
}

label {
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  padding: 10px;
  color: black;
  cursor: text;
  transition: 0.2s;
  z-index: -1;
}

button {
  padding: 10px 0;
  color: black;
  outline: none;
  background: transparent;
  border: 1px solid black;
  width: 100%;
  cursor: pointer;
}
input:focus ~ label,
input:valid ~ label,
textarea:focus ~ label,
textarea:valid ~ label {
  top: -35px;
  font-size: 14px;
}

.row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.row .input-group {
  flex-basis: 48%;
}

/*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
*
* Desktop layout */

@media only screen and (min-width: 1200px) {
  .head-info {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%; /* Full width */
    z-index: 3;
  }
  .nav-info {
    margin-top: 30px;
    margin-left: 30px;
    margin-right: 30px;
  }
  .nav-info a {
    padding: 15px;
  }

  /* Hide nav bar in desktop view */
  .menu {
    display: none;
  }

  /* hide nav bar selection in desktop view */
  .mob-right-nav {
    display: none;
  }

  .hero-box-wrapper {
    margin-top: 7%;
    margin-left: 7%;
    margin-right: 9.5%;
    max-width: 1450px;
  }

  .hero-text-wrapper {
    padding-top: 50px;
  }

  .hero-info h1 {
    font-size: 100px;
    font-weight: bold;
  }

  .hero h2 {
    font-size: 30px;
    font-weight: bold;
  }

  .hero p {
    font-size: 30px;
    font-weight: regular;
  }

  .hero p2 {
    font-size: 40px;
  }
  .button-wrapper {
    margin-top: 1.5%;
    position: relative;
    right: 60px;
    top: 30px;
  }

  .about {
    padding-top: 150px;
    margin-top: 20px;
    margin-bottom: 100px;
  }

  .about-grid {
    grid-auto-columns: 1fr 1fr;
    grid-template-areas: "first second";
  }

  .about-info {
    grid-area: first;
    max-width: 650px;
  }

  .about-info h1 {
    font-size: 30px;
    font-weight: bold;
  }

  .about-info p {
    font-size: 15px;
    font-weight: regular;
  }

  .photo {
    grid-area: second;
  }

  .pic {
  }

  .projects {
    padding-top: 60px;
  }

  .project-grid {
    grid-auto-columns: 1fr 1fr 1fr;
    grid-template-areas:
      "one two two"
      "three four five";
    margin-bottom: 10%;
    margin-left: 5%;
    margin-right: 5%;
  }

  .project-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    grid-area: one;
    margin-left: 20%;
    margin-bottom: 50px;
  }

  .project-info h2 {
    max-width: 380px;
    font-size: 50px;
    font-weight: bold;
  }
  .project-info p {
    max-width: 380px;
    font-size: 20px;
    font-weight: regular;
    margin-bottom: 30px;
  }

  .video {
    width: 700px;
    height: 400px;
    margin-bottom: 50px;
    margin-left: 10%;
    grid-area: two;
  }
  #myVideo {
    width: 700px;
    height: 400px;
  }
  .contact {
    margin-top: 140px;
  }

  .contact h1 {
    font-size: 40px;
    font-weight: bold;
    margin-bottom: 50px;
  }
  .contact p {
    max-width: 400px;
    font-weight: regular;
    font-size: 25px;
    margin-top: 0;
  }

  .form-wrapper {
    margin-left: 5%;
  }
}
/* 
*
*
*
*
*
*
* 
*/
@media only screen and (min-width: 800px) and (max-width: 1200px) {
  .head-info {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%; /* Full width */
    z-index: 3;
  }
  .nav-info {
    margin-top: 30px;
    margin-left: 30px;
    margin-right: 30px;
  }
  .nav-info a {
    padding: 15px;
  }

  /* Hide nav bar in desktop view */
  .menu {
    display: none;
  }

  /* hide nav bar selection in desktop view */
  .mob-right-nav {
    display: none;
  }

  .hero-box-wrapper {
    margin-top: 7%;
    margin-left: 7%;
    margin-right: 9.5%;
  }

  .hero-text-wrapper {
    padding-top: 50px;
  }

  .hero-info h1 {
    font-size: 80px;
    font-weight: bold;
  }

  .hero h2 {
    font-size: 28px;
    font-weight: bold;
  }

  .hero p {
    font-size: 28px;
    font-weight: regular;
  }

  .hero p2 {
    font-size: 60px;
  }
  .button-wrapper {
    margin-top: 1.5%;
  }

  .about-grid {
    grid-auto-columns: 1fr 1fr;
    grid-template-areas: "first second";
  }

  .about-info {
    grid-area: first;
  }

  .about-info h1 {
    font-size: 30px;
    font-weight: bold;
  }

  .about-info p {
    font-size: 15px;
    font-weight: regular;
  }

  .photo {
    grid-area: second;
  }

  .pic {
  }

  .project-grid {
    grid-auto-columns: 1fr 1fr;
    grid-template-areas:
      " one three"
      "four five"
      "two two";
  }

  .project-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    grid-area: one;
  }

  .project-info h2 {
    max-width: 380px;
    font-size: 50px;
    font-weight: bold;
  }
  .project-info p {
    max-width: 380px;
    font-size: 20px;
    font-weight: regular;
    margin-bottom: 30px;
  }

  .video {
    width: 700px;
    height: 400px;
    margin-bottom: 50px;
    grid-area: two;
  }
  #myVideo {
    width: 700px;
    height: 400px;
  }

  .contact h1 {
    font-size: 40px;
    font-weight: bold;
    margin-bottom: 50px;
  }
  .contact p {
    max-width: 400px;
    font-weight: regular;
    font-size: 25px;
    margin-top: 0;
  }

  .form-wrapper {
    margin-left: 5%;
  }
}
/* ... */

